--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -142,22 +142,7 @@
     color: white;
     height: 300px;
 }
-.palapadel{
-    height: 300px;
-    padding: auto;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    width: 200px;
-    margin: 20px;
-    border-radius: 30px;
-    color: black;
-}
-.palapadel img{
-    margin: auto;
-    height: 200px;
-    width: 130px;
-}
+
 
 ul {
     list-style-position: inside;
@@ -166,6 +151,10 @@ ul {
   
 ul li {
     display: flex;
-    margin-left: 20px; /* Ajusta este valor según sea necesario */
+    margin-left: 5px; /* Ajusta este valor según sea necesario */
+}
+ul li a{
+    text-align: center;
+    width: 100%;
 }
 
