--- a/src/form/Popup.css
+++ b/src/form/Popup.css
@@ -116,6 +116,7 @@
 }  
 .riesgo-item {
     height: 40px;
+    width: 220px;
     cursor: pointer;
     padding: 10px 20px;
 
@@ -182,4 +183,84 @@ react-datepicker__navigation-icon--next{
 .react-datepicker__navigation--next:hover,
 .react-datepicker__navigation--previous:hover {
   background-color: #e0a800; /* Un tono más oscuro de amarillo al pasar el ratón */
+}
+
+.popup_img{
+    height: 90%;
+    width: 60%;
+    background-color: white;
+    border-radius: 30px;
+    position: relative;
+}
+.upload-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+.upload-content h4{
+    margin-top: 40px;
+    font-size: 1.5em;
+}
+.upload-content .upload_content_div{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pdf-preview {
+    width: 100%;
+    height: 100%;
+    margin: 20px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.pdf-preview iframe{
+    height: 80%;
+    width: 80%;
+    border-radius: 30px;
+    border: none;
+}
+
+.popup-buttons {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    margin-bottom: 40px;
+
+}
+.popup-close{
+    background-color: white;
+    height: 40px;
+    width: 40px;
+}
+
+.popup-close svg{
+    background-color: white !important; 
+}
+
+.popup-button {
+    background-color: yellow;
+    border: none;
+    border-radius: 30px;
+    height: 40px;
+    width: 100px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.popup-button:hover {
+    background-color: rgb(255, 196, 0);
+}
+
+.img_s3{
+    height: 70%;
+    width: 80%;
+    margin: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
