--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -39,6 +39,9 @@
     background-color: whitesmoke; /* O el color que prefieras */
     z-index: 1;
 }
+.card_table .no_main{
+    background-color: white;
+}
 .table-row th {
     text-align: center;
     height: 60px; /* Altura fija para los th y td */
@@ -60,12 +63,14 @@
 }
 
 .table-row th {
+    text-align: center;
     height: 40px; /* Altura fija para el encabezado */
     font-size: 0.8em;
     padding-left: 20px;
 }
 
 .table-row td {
+    text-align: center;
     height: 60px;
     padding-left: 20px;
 }
@@ -79,11 +84,11 @@
 
 .archive_responsable {
     padding: 0px 20px;
-    cursor: pointer;
     width: 200px;
 }
 
 .archive_responsable .archive {
+    cursor: pointer;
     background-color: yellow;
     border-radius: 20px;
     width: 150px; /* Ajusta el ancho de la caja */
@@ -91,7 +96,9 @@
     display: flex;
     align-items: center;
 }
-
+.archive_responsable p{
+    text-align: center;
+}
 .archive_responsable .archive p {
     margin: 10px;
     display: block; /* Cambiar de flex a block */
@@ -119,6 +126,7 @@
     grid-template-columns: repeat(2, 1fr); /* Divide en 4 columnas iguales */
 }
 .close-icon {
+    z-index: 9999;
     position: absolute;
     top: 10%;
     right: 10%;
@@ -138,12 +146,18 @@
 }
 
 /* ADMIN */
+.bussines_box{
+    height: 100%;
+}
+.bussines_div{
+    height: 90%;
+}
 .admin_boxes {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     justify-content: start;
-    height: 100%;
+    height: 90%;
     width: 100%;
     padding: 0px 80px;
 }
@@ -236,3 +250,24 @@
     border: 1px solid black;
     border-radius: 30px;
 }
+
+.skeleton {
+    background: linear-gradient(90deg, #e0e0e0 25%, #f0f0f0 50%, #e0e0e0 75%);
+    background-size: 200% 100%;
+    animation: skeleton-loading 1.5s infinite;
+  }
+  
+  /* Animación para el efecto de esqueleto */
+  @keyframes skeleton-loading {
+    0% {
+      background-position: 200% 0;
+    }
+    100% {
+      background-position: -200% 0;
+    }
+}
+
+.skeleton-text {
+    width: 100%; /* Ajusta esto para simular el ancho de una línea de texto */
+    height: 16px; /* Ajusta la altura según el tamaño del texto */
+  }
