--- a/src/form/Popup.css
+++ b/src/form/Popup.css
@@ -13,14 +13,14 @@
 }
 
 .popup {
-    height: 60%;
+    height: 70%;
     width: 50%;
     background: white;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 30px;
     position: relative;
     width: 90%;
-    max-width: 500px;
+    max-width: 1000px;
     display: flex;
     justify-content: center;
 }
@@ -97,18 +97,37 @@
     box-shadow: none;
   }
 
-
-.control_riesgos div{
-    display: flex;
-}
 .form_control{
     height: 80%;
 }
-.control_riesgos {
-    max-height: 150px; /* Ajusta esta altura según tus necesidades */
-    overflow-y: auto;  /* Habilita el scroll vertical */
-    padding: 10px; /* Opcional: añade padding para un mejor estilo */
+.riesgos_div{
+    width: 100%;
 }
+.control_riesgos {
+    border: 1px solid gray;
+    border-radius: 30px;
+    width: 100%;
+    height: 150px;
+    overflow-y: scroll;
+    padding: 10px;
+  }
+  
+  /* Ocultar barra de scroll en WebKit */
+  .control_riesgos::-webkit-scrollbar {
+    display: none; /* Oculta completamente la barra de desplazamiento en WebKit */
+  }
+  
+  /* Para Firefox */
+  .control_riesgos {
+    scrollbar-width: none; /* Oculta la barra de desplazamiento en Firefox */
+  }
+
+.control_riesgos div{
+    display: flex;
+    width: 80%;
+    margin: 10px auto;
+}
+
 .name_control{
     height: 40px;
     border-radius: 30px;
