--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -89,7 +89,7 @@
 
 .archive_responsable .archive {
     cursor: pointer;
-    background-color: yellow;
+    background-color: #e5f301FF;
     border-radius: 20px;
     width: 150px; /* Ajusta el ancho de la caja */
     height: 35px;
@@ -164,6 +164,7 @@
   
 .bussiness_boxes {
     cursor: pointer;
+    height: 280px;
     width: 80%;
     padding: 10px;
     margin: 20px;
@@ -218,7 +219,7 @@
     align-items: center;
 }
 .riesgos_controles div{
-    background-color: yellow;
+    background-color: #e5f301FF;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -236,7 +237,7 @@
 }
 .total_add svg{
     margin-right: 200px;
-    background-color: yellow;
+    background-color: #e5f301FF;
     border-radius: 100px;
     padding: 10px;
     height: 40px;
@@ -245,10 +246,12 @@
 }
 
 .card_option .table-container{
+    background-color: whitesmoke;
     height: 100%;
     padding: 20px 0px;
     border: 1px solid black;
     border-radius: 30px;
+    box-shadow: 1px 1px 1px grey;
 }
 
 .skeleton {
