--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -11,10 +11,10 @@
     letter-spacing: 4px;
 }
 .landing_page header span{
-    color: yellow;
+    color: #e5f301FF;
 }
 .landing_page header .login_button{
-    background-color: yellow;
+    background-color: #e5f301FF;
     border: none;
     border-radius: 30px;
     
@@ -63,7 +63,7 @@
     margin-bottom: 0px;
 }
 .contact_page h3 span{
-    color: yellow;
+    color: #e5f301FF;
 }
 .contact_page .contact_div{
     margin: 0px auto;
@@ -125,7 +125,7 @@
     width: 200px;
     padding: 20px 10px;
     color: black;
-    background-color: yellow;
+    background-color: #e5f301FF;
     border: none;
     border-radius: 30px;
     cursor: pointer;
