--- a/src/form/Popup.css
+++ b/src/form/Popup.css
@@ -22,6 +22,7 @@
     width: 90%;
     max-width: 1000px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
 }
   
@@ -70,6 +71,10 @@
 }
 .popup form button:hover{
     background-color: rgb(255, 196, 0);
+}
+.popup form button:disabled:hover {
+    background-color: #e5f301FF;; /* Restablece el color o define uno específico */
+    cursor: not-allowed; /* Asegúrate de que el cursor siga siendo not-allowed */
 }
 
 .popup form .number_form_name{
