--- a/src/form/Popup.css
+++ b/src/form/Popup.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 9999;
+    z-index: 9990;
 }
 
 .popup {
@@ -122,6 +122,23 @@
     overflow-y: scroll;
     padding: 10px;
   }
+.control_disabled{
+    border: 1px solid gray;
+    border-radius: 30px;
+    width: 100%;
+    height: 150px;
+    overflow-y: scroll;
+    padding: 10px;
+}
+.control_disabled .overlay_control {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2); /* Color gris con opacidad */
+    z-index: 0; /* Asegúrate de que esté por debajo de otros elementos */
+}
   
   /* Ocultar barra de scroll en WebKit */
   .control_riesgos::-webkit-scrollbar {
