--- a/src/form/Popup.css
+++ b/src/form/Popup.css
@@ -122,13 +122,22 @@
     overflow-y: scroll;
     padding: 10px;
   }
-.control_disabled{
+
+
+  .control_disabled {
     border: 1px solid gray;
     border-radius: 30px;
     width: 100%;
     height: 150px;
     overflow-y: scroll;
     padding: 10px;
+
+    /* Ocultar scrollbar en navegadores compatibles */
+    scrollbar-width: none; /* Firefox */
+}
+
+.control_disabled::-webkit-scrollbar {
+    display: none; /* Chrome, Safari y Edge */
 }
 .control_disabled .overlay_control {
     position: absolute;
