--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -29,8 +29,10 @@
     height: 70%;
     text-align: center;
 }
+
+
 .table-container {
-    height: 260px; /* Ajusta la altura según tus necesidades */
+    height: 89%; /* Ajusta la altura según tus necesidades */
     overflow-y: auto;
     border-radius: 30px;
     position: relative;
