--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -165,33 +165,6 @@
     background-color: rgba(184, 184, 184, 0.26);
 }
 
-
-.upper_box{
-    border: 1px solid black;
-    display: flex;
-    flex-direction: row;
-    width: 400px;
-    height: 100px;
-    padding: 0px;
-    border-radius: 30px;
-    margin: 20px 0px;
-}
-
-.upper_box .text{
-    width: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5em;
-}
-.upper_box .number{
-    width: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2em;
-    font-weight: bold;
-}
 .main_action{
     height: 100%;
 }
@@ -212,6 +185,63 @@
     padding: 10px;
     margin: 10px;
     
+}
+@media (max-width: 1280px) {
+    .upper_box{
+        border: 1px solid black;
+        display: flex;
+        flex-direction: row;
+        width: 300px;
+        height: 60px;
+        padding: 0px;
+        border-radius: 30px;
+        margin: 20px 0px;
+    }
+    
+    .upper_box .text{
+        width: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.2em;
+    }
+    .upper_box .number{
+        width: 20%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.5em;
+        font-weight: bold;
+    }
+}
+
+@media (min-width: 1281px) {
+    .upper_box{
+        border: 1px solid black;
+        display: flex;
+        flex-direction: row;
+        width: 400px;
+        height: 100px;
+        padding: 0px;
+        border-radius: 30px;
+        margin: 20px 0px;
+    }
+    
+    .upper_box .text{
+        width: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.5em;
+    }
+    .upper_box .number{
+        width: 20%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 2em;
+        font-weight: bold;
+    }
 }
 .total_add{
     display: flex;
