--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -66,6 +66,8 @@ body {
     color: black;
     text-decoration: none;
 }
+
+
 .signout_button {
     background-color: #e5f301FF;
     font-size: 0.8em;
@@ -92,7 +94,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 80px;
+    height: 60px; /* Valor base (para pantallas más pequeñas) */
 }
 
 .search-container {
@@ -123,4 +125,12 @@ body {
     object-fit: cover; 
     object-position: center;  
 }
+
+@media (min-width: 1536px) {
+    .navbar {
+        height: 80px; /* Aplica este valor solo en pantallas >= 2xl */
+    }
+}
+
+
 
