--- a/src/form/Popup.css
+++ b/src/form/Popup.css
@@ -41,6 +41,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: 100%;
     align-items: center;
     justify-content: space-around;
 }
@@ -110,15 +111,17 @@
 
 .form_control{
     height: 80%;
+    width: 100% !important;
 }
 .riesgos_div{
     width: 100%;
 }
 .control_riesgos {
+    margin: 0px auto;
     border: 1px solid gray;
     border-radius: 30px;
-    width: 100%;
-    height: 150px;
+    width: 82%;
+    height: 350px;
     overflow-y: scroll;
     padding: 10px;
   }
