--- a/src/form/Popup.css
+++ b/src/form/Popup.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.05);
+    background-color: rgba(0, 0, 0, 0.3);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -109,8 +109,9 @@
   }
 
 .form_control{
-    height: 80%;
-    width: 100% !important;
+    padding-top: 1em;
+    height: 90%;
+    width: 100%;
 }
 .riesgos_div{
     width: 100%;
