--- a/src/form/Popup.css
+++ b/src/form/Popup.css
@@ -196,7 +196,7 @@
     padding: 20px;
 }  
 .riesgo-item {
-    height: 40px;
+    height: 50px;
     width: 220px;
     cursor: pointer;
     padding: 10px 20px;
@@ -209,6 +209,7 @@
     align-items: center;
 }
 .riesgo-item p{
+    font-size: 0.9em;
     margin: auto;
     color: rgba(0, 0, 0, 0.801);
     width: 70%;
