--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -106,7 +106,9 @@
     height: 100%;
     position: relative;
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Divide en 4 columnas iguales */
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    align-items: center;
 }
 .close-icon {
     z-index: 9989;
@@ -123,8 +125,8 @@
 }
 
 .small_card{
-    padding: 20px;
-    width: 60vh;
+    padding: 0px;
+    width: 50vh;
     height: 40vh;
 }
 
