--- a/src/form/Popup.css
+++ b/src/form/Popup.css
@@ -279,7 +279,8 @@ react-datepicker__navigation-icon--next{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: 90%;
+    padding: 0px 10%;
 }
 .upload-content h4{
     margin-top: 40px;
